--- a/index.html
+++ b/index.html
@@ -31,6 +31,42 @@
 	<canvas width="500" height="500" id="testCanvas"></canvas>
 
 	<script>
+		var canvasSize = {
+			width:500,
+			height:500
+		};
+
+		// image size, in cm
+		var imageSize = {
+			width:30,
+			height:40
+		};
+		// the width of the frame in cm
+		var frameWidth = 4;
+		// the mount border in cm
+		var mountBorder = 5;
+
+
+		// convert the image size into px
+		var pxSize = {
+			width:imageSize.width*10,
+			height:imageSize.height*10
+		};
+		var pxFrameWidth = frameWidth*10;
+		var pxMountBorder = mountBorder*10;
+
+		// calculate the total size of the frame
+		var frameSize = {
+			width:pxSize.width + (pxFrameWidth*2) + (pxMountBorder*2),
+			height:pxSize.height + (pxFrameWidth*2) + (pxMountBorder*2)
+		};
+
+		if((frameSize.width > canvasSize.width) || (frameSize.height > canvasSize.height)){
+			// frame is too big for the canvas - porportionally resize it
+
+		}
+
+
 		var canvas = document.getElementById('testCanvas'),
 			ctx = canvas.getContext('2d'),
 			image = new Image();
@@ -41,7 +77,7 @@
 			var actualFrameWidth = frame.width,
 				actualFrameHeight = frame.height,
 				aspectRatio = actualFrameWidth / actualFrameHeight,
-				frameWidth = 80,
+				frameWidth = 50,
 				frameHeight = Math.floor(frameWidth / aspectRatio);
 			var x = canvas.width / 2;
 			var y = canvas.height / 2;
@@ -53,46 +89,40 @@
 			ctx.fillStyle = '#fff';
 			ctx.fillRect(0, 0, 500, 500);
 
-			var p1 = 149.5, p2 = 500-150+0.5;
+			var x1 = (frameSize.width/2)-(pxSize.width/2)-0.5,
+				x2 = (frameSize.width/2)+(pxSize.width/2)+10+0.5,
+				y1 = (frameSize.height/2)-(pxSize.height/2)-0.5,
+				y2 = (frameSize.height/2)+(pxSize.height/2)+10+0.5;
 			ctx.lineWidth = 1;
-			ctx.strokeStyle = '#666';
+			ctx.strokeStyle = '#eee';
 			ctx.beginPath();
-			ctx.moveTo(p1, p1);
-			ctx.lineTo(p1, p2);
-			ctx.lineTo(p2, p2);
-			ctx.lineTo(p2, p1);
-			ctx.lineTo(p1, p1);
+			ctx.moveTo(x1, y1);
+			ctx.lineTo(x1, y2);
+			ctx.lineTo(x2, y2);
+			ctx.lineTo(x2, y1);
 			ctx.closePath();
 			ctx.stroke();
 
 			ctx.beginPath();
-			ctx.strokeStyle = '#ccc';
+			ctx.strokeStyle = '#efefef';
 			ctx.lineWidth = 2;
-			p1 += 1; p2 -= 1;
-			ctx.moveTo(p1, p1);
-			ctx.lineTo(p1, p2);
-			ctx.lineTo(p2, p2);
-			ctx.lineTo(p2, p1);
-			ctx.lineTo(p1, p1);
+			x1++;
+			x2--;
+			y1++;
+			y2--;
+			ctx.moveTo(x1, y1);
+			ctx.lineTo(x1, y2);
+			ctx.lineTo(x2, y2);
+			ctx.lineTo(x2, y1);
 			ctx.closePath();
 			ctx.stroke();
 
 			/**
 			 * Draw the image(s)
 			 */
-			p1 += 10;
-			p2 -= 10;
-			ctx.save();
-			ctx.beginPath();
-			ctx.moveTo(p1, p1);
-			ctx.lineTo(p1, p2);
-			ctx.lineTo(p2, p2);
-			ctx.lineTo(p2, p1);
-			ctx.lineTo(p1, p1);
-			ctx.closePath();
-			ctx.clip();
-			ctx.drawImage(image, 0, 0, image.width, image.height, p1, p1, p2-p1, p2-p1);
-			ctx.restore();
+			x1 += 5;
+			y1 += 5;
+			ctx.drawImage(image, x1, y1, pxSize.width, pxSize.height);
 
 
 			/**
